--- a/plugins/struts2-junit5-user-custom-plugin/pom.xml
+++ b/plugins/struts2-junit5-user-custom-plugin/pom.xml
@@ -32,7 +32,7 @@
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <struts2.version>2.5.29</struts2.version>
-    <spring.platformVersion>5.3.17</spring.platformVersion>
+    <spring.platformVersion>5.3.18</spring.platformVersion>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <junit.version>5.8.2</junit.version>
     <log4j2.version>2.17.2</log4j2.version>
@@ -183,10 +183,12 @@
     <pluginManagement>
       <plugins>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
+          <version>3.10.1</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.2</version>
         </plugin>
