--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -20,12 +20,12 @@
     <maven.compiler.target>${java.version}</maven.compiler.target>
 
     <struts2.version>2.5.29</struts2.version>
-    <spring.platformVersion>5.3.17</spring.platformVersion>
+    <spring.platformVersion>5.3.18</spring.platformVersion>
     
     <log4j2.version>2.17.2</log4j2.version>
     
     <jackson.version>2.13.2</jackson.version>
-    <jackson-databind.version>2.13.2.1</jackson-databind.version>
+    <jackson-databind.version>2.13.2.2</jackson-databind.version>
     <!-- 
       Struts에서 Jackson Databind를 따로 프로퍼티를 땃는지 이해가 안갔는데, 
       jackson-databind 만 마이크로 보안패치가 잦은 편이여서, 따로 딴 것 같다.
@@ -190,34 +190,42 @@
     <pluginManagement>
       <plugins>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId> 
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId> 
           <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
+          <version>3.2.0</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId> 
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
+          <version>3.10.1</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.2</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>2.22.2</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
-          <version>3.2.2</version>
+          <version>3.3.2</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-install-plugin</artifactId>
           <version>2.5.2</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
