- Struts2 2.5.30 업데이트, 이중 평가 RCE 취약점 확인 예제 프로젝트 추가   https://struts.apache.org/announce-2022#a20220404   https://github.com/apache/struts/pull/496   https://securitylab.github.com/research/apache-struts-double-evaluation/    ㄴ https://github.com/m-y-mo/alias-example        ㄴ 악의적 동작을 실행하는 ONGL 표현식 문자열을 Alias 인터셉터가 설정된 액션에               전달해야할 듯 한데,...  예제 프로젝트를 만들어보긴했지만.....😥😥😥               재현은 못했다...               이중 평가가 되지 않도록 구현하는 것이 안전하다는 것은 약간이나마 알 것 같다.
- 기타 수정
  - web.xml 스키마 4.0으로 변경
  - 몇몇 프로젝트의 struts.xml 에서 package 하위 요소 순서가 잘못된 부분 수정
  - Jetty 서버 사용시 콘솔에서 Enter눌러 리로딩 되도록 변경
    Jetty 전버전에선 리로딩시 StrutsPrepareAndExecuteFilter 로딩이 제대로 안되었는데, 현시점 현재 환경에서는 잘된다.

--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -19,7 +19,7 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
 
-    <struts2.version>2.5.29</struts2.version>
+    <struts2.version>2.5.30</struts2.version>
     <spring.platformVersion>5.3.18</spring.platformVersion>
     
     <log4j2.version>2.17.2</log4j2.version>
@@ -52,6 +52,10 @@
     <asm.version>9.2</asm.version>
 
     <jetty.version>10.0.8</jetty.version>
+    <jettyContextPath>/${project.build.finalName}</jettyContextPath>
+    
+    <!-- 현시점 환경에서 다시 시도해봤을 때, Jetty 리로딩에 문제가 없어서 Enter를 누르면 재시작 되도록 0으로 설정을 바꾸었다. -->
+    <jettyAutoDeploy>0</jettyAutoDeploy>
   </properties>
 
   <!-- module에도 상대경로 접근 방식으로 접근할 수 있다.-->
@@ -106,7 +110,9 @@
     <module>../json/json-customize-jackson-struts</module>
     <!-- 25. JSON 튜토리얼 - Struts 2 JSON Plugin 예제 -->
     <module>../json/json-struts</module>
-    
+    <!-- 26. 이중 평가 테스트 ( AliasInterceptor ) -->
+    <module>../struts-double-evaluation-test</module>
+
   </modules>
 
   <dependencyManagement>
@@ -159,7 +165,7 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
-      <version>3.1.0</version>
+      <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -305,11 +311,12 @@
         <artifactId>jetty-maven-plugin</artifactId>
         <version>${jetty.version}</version>
         <configuration>
+          <!-- jetty가 forked 모드로 실행될 때만 의미가 있는 것 같다. 일단 설정은 남겨두자. -->
           <jvmArgs>
             --add-opens java.base/java.util=ALL-UNNAMED
           </jvmArgs>
           <webApp>
-            <contextPath>/${project.build.finalName}</contextPath>
+            <contextPath>${jettyContextPath}</contextPath>
             <sessionHandler>
               <sessionIdPathParameterName>none</sessionIdPathParameterName>
             </sessionHandler>
@@ -323,7 +330,7 @@
               오류 패턴이 Spring에서 봤던것과 같다. (Spring은 ContextLoaderListener 를 정상적으로 못 읽음)
               -1로 설정하여 이 기능을 꺼놓도록 하자!
           -->
-          <scan>-1</scan>
+          <scan>${jettyAutoDeploy}</scan>
           <scanTargetPatterns>
             <scanTargetPattern>
               <directory>src/main/webapp/WEB-INF</directory>
