--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -20,7 +20,7 @@
     <maven.compiler.target>${java.version}</maven.compiler.target>
 
     <struts2.version>2.5.30</struts2.version>
-    <spring.platformVersion>5.3.18</spring.platformVersion>
+    <spring.platformVersion>5.3.19</spring.platformVersion>
     
     <log4j2.version>2.17.2</log4j2.version>
     
@@ -33,14 +33,14 @@
     <flexjson.version>3.3</flexjson.version>
 
     <hikaricp.version>5.0.1</hikaricp.version>
-    <hibernate.version>5.6.7.Final</hibernate.version>
+    <hibernate.version>5.6.8.Final</hibernate.version>
     <hsqldb.version>2.6.1</hsqldb.version>
 
     <guava.version>31.1-jre</guava.version>
 
     <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
     
-    <jasperreports.version>6.19.0</jasperreports.version>
+    <jasperreports.version>6.19.1</jasperreports.version>
 
     <lombok.version>1.18.22</lombok.version>
 
@@ -51,10 +51,11 @@
     <!-- struts2-convention-plugin에서 Java 17 바이트 코드 해석을 못해서, 버전을 올렸다. -->
     <asm.version>9.2</asm.version>
 
-    <jetty.version>10.0.8</jetty.version>
+    <jetty.version>10.0.9</jetty.version>
     <jettyContextPath>/${project.build.finalName}</jettyContextPath>
     
     <!-- 현시점 환경에서 다시 시도해봤을 때, Jetty 리로딩에 문제가 없어서 Enter를 누르면 재시작 되도록 0으로 설정을 바꾸었다. -->
+    <!-- 그런데, 이 프로젝트는 아니고, 다른 스프링 프로젝트에서.. XML 기반 설정은 문제가 없는데, Java Config 기반 설정으로 하면 문제가 여전히 있다. -->
     <jettyAutoDeploy>0</jettyAutoDeploy>
   </properties>
 
