--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -25,7 +25,7 @@
     <log4j2.version>2.19.0</log4j2.version>
     
     <jackson.version>2.13.4</jackson.version>
-    <jackson-databind.version>${jackson.version}</jackson-databind.version>
+    <jackson-databind.version>2.13.4.2</jackson-databind.version>
     <!-- 
       Struts에서 Jackson Databind를 따로 프로퍼티를 땃는지 이해가 안갔는데, 
       jackson-databind 만 마이크로 보안패치가 잦은 편이여서, 따로 딴 것 같다.
